#405 Fix drowdown z-index

--- a/frontend/src/public/style.css
+++ b/frontend/src/public/style.css
@@ -50,3 +50,7 @@
 #details_cover_image {
   height: 100%;
 }
+
+.menu-download {
+  z-index: 999;
+}
